--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -7,6 +7,7 @@
   font-family: Lato;
 }
 
+
 /* =============================================================================
 scroll
 ==============================================================================*/
@@ -88,6 +89,7 @@ navbar
 .icon-bar {
   background-color: #fff;
   display: block;
+  position: fixed;
   height: 2px;
   border-radius: 1px;
   margin-bottom: 4px;
@@ -107,8 +109,8 @@ navbar
 }
 .hamburger-menu {
   cursor: pointer;
-  position: fixed;
   float: right;
+  position: absolute;
   top: 25px;
   right: 20px;
   z-index: 999;
@@ -142,7 +144,7 @@ navbar
 	width: 100%;
 	background: rgba(255, 255, 255, .9);
 	overflow: auto;
-	z-index: 99;
+	z-index: 998;
   display: none;
 }
 .mobile-nav-items {
@@ -183,17 +185,19 @@ home-header
 .header{
   width: 100%;
   height: 100vh;
+  position: relative;
   background-position: 50% 0;
   background-image: url(../img/h2.jpg);
   background-position: left;
   background-size: cover;
-  z-index: 988
+  z-index: 988;
 }
 
 /* header content */
 .header-content h1{
   width: 100%;
   font-size: 42px;
+  position: absolute;
   font-weight: normal;
   letter-spacing: 2px;
   color: white;
@@ -262,9 +266,34 @@ home-header
 
 
 
-
-
-
+/* =============================================================================
+home about
+==============================================================================*/
+.home-about{
+  margin-top: 100px;
+}
+.home-about h1{
+  text-align: center;
+  font-size: 28px;
+  margin-bottom: 2px;
+}
+.home-about p{
+  text-align: center;
+  margin-top: 26px;
+}
+.home-about div{
+  width: 180px;
+  height: 4px;
+  background-color: grey;
+}
+.home-about div::after{
+  content: "";
+  position: absolute;
+  margin-left: -90px;
+  width: 30px;
+  height: 4px;
+  background-color: rgb(255, 112, 112);
+}
 
 
 
