--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -17,7 +17,7 @@ scroll
 }
 /* Track */
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.1);
+    /* -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.1); */
     -webkit-border-radius: 10px;
     border-radius: 10px;
 }
@@ -27,7 +27,7 @@ scroll
     -webkit-border-radius: 10px;
     border-radius: 10px;
     background: rgb(255, 112, 112);
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1);
+    /* -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.1); */
 }
 ::-webkit-scrollbar-thumb:window-inactive {
     background: rgba(0,0,0,0.4);
@@ -57,7 +57,6 @@ navbar
 /* Logo image */
 .nav-icon {
   position: absolute;
-  height: 45px;
   cursor: pointer;
   top: 10px;
   left: 20px;
